# file-organizer

./: .dockerignore  .gitignore  Dockerfile  Makefile  main.py  pyproject.toml
application/: organize_files_use_case.py
application/services/: file_classifier.py
docs/: README.md
domain/entities/: file_info.py
domain/rules/: extension_mapping.py
infrastructure/file_system/: file_mover.py  file_scanner.py
infrastructure/logging/: LoggingConfiguration.py  logging_configuration.py
tests/: test_file_classifier.py  test_file_mover.py  test_file_scanner.py  test_organize_files_use_case.py
