[project]
name = "pythonproject"
version = "0.1.0"
description = "A console-based Python application for automatic file organization."
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.1.0",
    "python-json-logger>=4.1.0",
]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
